{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 148,
  "lineage": "ae189728-653e-e38e-0963-9458b303267f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-prv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043547ebea82e53cf",
            "route_table_id": "rtb-063b8821802b62058",
            "subnet_id": "subnet-01365bd1204d6a079"
          },
          "dependencies": [
            "module.pavan-subnet.aws_subnet.private_subnets",
            "module.pavan-vpc.aws_vpc.vpc-terra",
            "module.pavan-routetables.aws_route_table.prv-rt-terra"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cea79968a1beb22",
            "route_table_id": "rtb-063b8821802b62058",
            "subnet_id": "subnet-02c61cbdbf10436c5"
          },
          "dependencies": [
            "module.pavan-subnet.aws_subnet.private_subnets",
            "module.pavan-vpc.aws_vpc.vpc-terra",
            "module.pavan-routetables.aws_route_table.prv-rt-terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c74aa285701fbd54",
            "route_table_id": "rtb-0184daa2021b3fe18",
            "subnet_id": "subnet-070b7cb3e20f48b4a"
          },
          "dependencies": [
            "module.pavan-igw.aws_internet_gateway.gw-terra",
            "module.pavan-routetables.aws_route_table.pub-rt-terra",
            "module.pavan-subnet.aws_subnet.public_subnets",
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be50d244863a4915",
            "route_table_id": "rtb-0184daa2021b3fe18",
            "subnet_id": "subnet-01a30d416ff41e15d"
          },
          "dependencies": [
            "module.pavan-igw.aws_internet_gateway.gw-terra",
            "module.pavan-routetables.aws_route_table.pub-rt-terra",
            "module.pavan-subnet.aws_subnet.public_subnets",
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "module": "module.pavan-aws-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:305311160206:instance/i-0c4681581b16068f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4681581b16068f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSLogin",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b06f54d261941382",
            "private_dns": "ip-10-0-0-43.us-east-2.compute.internal",
            "private_ip": "10.0.0.43",
            "public_dns": "ec2-3-142-42-161.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.42.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-097f2b84638dc6f29",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070b7cb3e20f48b4a",
            "tags": {
              "Name": "instance-terra"
            },
            "tags_all": {
              "Name": "instance-terra"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0301aa09e8a6109fb"
            ]
          },
          "dependencies": [
            "module.pavan-subnet.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.pavan-aws-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secruity-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:security-group/sg-0b3e7aa496587eb2a",
            "description": "Allow traffic 80,443,8080,22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3e7aa496587eb2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security-terraform",
            "name_prefix": "",
            "owner_id": "305311160206",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-terraform"
            },
            "tags_all": {
              "Name": "security-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0809103e272c60f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "module": "module.pavan-igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:internet-gateway/igw-06b4d93117f7c3757",
            "id": "igw-06b4d93117f7c3757",
            "owner_id": "305311160206",
            "tags": {
              "Name": "gw-terra"
            },
            "tags_all": {
              "Name": "gw-terra"
            },
            "vpc_id": "vpc-0809103e272c60f79"
          },
          "dependencies": [
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "module": "module.pavan-routetables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv-rt-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:route-table/rtb-063b8821802b62058",
            "id": "rtb-063b8821802b62058",
            "owner_id": "305311160206",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prv-rt-terra"
            },
            "tags_all": {
              "Name": "prv-rt-terra"
            },
            "vpc_id": "vpc-0809103e272c60f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "module": "module.pavan-routetables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:route-table/rtb-0184daa2021b3fe18",
            "id": "rtb-0184daa2021b3fe18",
            "owner_id": "305311160206",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b4d93117f7c3757",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt-terra"
            },
            "tags_all": {
              "Name": "pub-rt-terra"
            },
            "vpc_id": "vpc-0809103e272c60f79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pavan-igw.aws_internet_gateway.gw-terra",
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "module": "module.pavan-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:subnet/subnet-01365bd1204d6a079",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/25",
            "id": "subnet-01365bd1204d6a079",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305311160206",
            "tags": {
              "Name": "pavan.dev-private_subnets.1"
            },
            "tags_all": {
              "Name": "pavan.dev-private_subnets.1"
            },
            "vpc_id": "vpc-0809103e272c60f79"
          },
          "dependencies": [
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:subnet/subnet-02c61cbdbf10436c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.128/25",
            "id": "subnet-02c61cbdbf10436c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305311160206",
            "tags": {
              "Name": "pavan.dev-private_subnets.2"
            },
            "tags_all": {
              "Name": "pavan.dev-private_subnets.2"
            },
            "vpc_id": "vpc-0809103e272c60f79"
          },
          "dependencies": [
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "module": "module.pavan-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:subnet/subnet-070b7cb3e20f48b4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/25",
            "id": "subnet-070b7cb3e20f48b4a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "305311160206",
            "tags": {
              "Name": "pavan.dev-public_subnets.1"
            },
            "tags_all": {
              "Name": "pavan.dev-public_subnets.1"
            },
            "vpc_id": "vpc-0809103e272c60f79"
          },
          "dependencies": [
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:subnet/subnet-01a30d416ff41e15d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.128/25",
            "id": "subnet-01a30d416ff41e15d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "305311160206",
            "tags": {
              "Name": "pavan.dev-public_subnets.2"
            },
            "tags_all": {
              "Name": "pavan.dev-public_subnets.2"
            },
            "vpc_id": "vpc-0809103e272c60f79"
          },
          "dependencies": [
            "module.pavan-vpc.aws_vpc.vpc-terra"
          ]
        }
      ]
    },
    {
      "module": "module.pavan-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:305311160206:vpc/vpc-0809103e272c60f79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-0d9f10fa37d2a46bd",
            "default_route_table_id": "rtb-0d3e9a1c38297c9ac",
            "default_security_group_id": "sg-0301aa09e8a6109fb",
            "dhcp_options_id": "dopt-c5d74cae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0809103e272c60f79",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d3e9a1c38297c9ac",
            "owner_id": "305311160206",
            "tags": {
              "Name": "vpc-terra"
            },
            "tags_all": {
              "Name": "vpc-terra"
            }
          }
        }
      ]
    }
  ]
}